--- a/app/views/branded/layouts/modal_search/_result.html.erb
+++ b/app/views/branded/layouts/modal_search/_result.html.erb
@@ -9,7 +9,10 @@ Locals:
 :result_partial - The partial you have defined to display the item's info
 :search_path    - the path to controller endpoint that will perform the search
 :search_method  - the http method used to perform the search
+:readonly       - whether or not to display the Remove button
 %>
+
+<% readonly = local_assigns.fetch(:readonly, false) %>
 
 <% title = result[item_name_attr] %>
 
@@ -20,9 +23,12 @@ Locals:
     <%= button_tag _("Select"), type: 'button',
                    class: "modal-search-result-selector #{selected ? 'hidden' : ''}",
                    title: _("Click to select %{item_name}") % { item_name: title } %>
-    <%= button_tag _("Remove"), type: 'button',
-                   class: "modal-search-result-unselector #{selected ? '' : 'hidden'}",
-                   title: _("Click to remove %{item_name}") % { item_name: title } %>
+
+    <% unless readonly %>
+      <%= button_tag _("Remove"), type: 'button',
+                    class: "modal-search-result-unselector #{selected ? '' : 'hidden'}",
+                    title: _("Click to remove %{item_name}") % { item_name: title } %>
+    <% end %>
   </div>
 
   <% if result_partial.present? %>
