fix: button behaviour

--- a/app/assets/stylesheets/dmpopidor.scss
+++ b/app/assets/stylesheets/dmpopidor.scss
@@ -494,7 +494,7 @@ header .main-nav {
     background-color: $rust;
     color: $white;
     outline: none;
-    margin-top: 5px;
+    margin-bottom: 10px;
   }
 
   .btn-default,
@@ -508,7 +508,7 @@ header .main-nav {
     background-color: $rust;
     color: $white;
     outline: none;
-    margin-top: 5px;
+    margin-bottom: 10px;
   }
 
   .btn-secondary,
@@ -522,7 +522,7 @@ header .main-nav {
     background-color: $light-grey;
     color: $black;
     outline: none;
-    margin-top: 5px;
+    margin-bottom: 10px;
   }
 
   .combobox-clear-button,
