fix: yet another issue with buttons

--- a/app/assets/stylesheets/dmpopidor.scss
+++ b/app/assets/stylesheets/dmpopidor.scss
@@ -494,6 +494,7 @@ header .main-nav {
     background-color: $rust;
     color: $white;
     outline: none;
+    margin-top: 5px;
     margin-bottom: 10px;
   }
 
@@ -508,6 +509,7 @@ header .main-nav {
     background-color: $rust;
     color: $white;
     outline: none;
+    margin-top: 5px;
     margin-bottom: 10px;
   }
 
@@ -522,6 +524,7 @@ header .main-nav {
     background-color: $light-grey;
     color: $black;
     outline: none;
+    margin-top: 5px;
     margin-bottom: 10px;
   }
 
@@ -995,6 +998,7 @@ header .main-nav {
       border-color: $blue;
       background-color: $blue;
       color: $white;
+      margin-top: 5px;
       margin-bottom: 10px;
     }
 
@@ -1008,6 +1012,7 @@ header .main-nav {
       border-color: $blue;
       background-color: $blue;
       color: $white;
+      margin-top: 5px;
       margin-bottom: 10px;
     }
 
@@ -1124,6 +1129,7 @@ header .main-nav {
       background-color: $yellow;
       color: $black;
       text-decoration: none;
+      margin-top: 5px;
       margin-bottom: 10px;
     }
 
@@ -1138,6 +1144,7 @@ header .main-nav {
       background-color: $yellow;
       color: $black;
       text-decoration: none;
+      margin-top: 5px;
       margin-bottom: 10px;
     }
 
