chore: improvements on tables CSS

--- a/app/assets/stylesheets/dmpopidor/_tables.scss
+++ b/app/assets/stylesheets/dmpopidor/_tables.scss
@@ -31,7 +31,7 @@
 
     // Cells and Cells borders
     tbody>tr>td {
-      width: 100%;
+      // width: 100%;
       border: 1px solid $dark-blue;
       border-top: none;
 
