--- a/app/assets/stylesheets/dmpopidor/_header.scss
+++ b/app/assets/stylesheets/dmpopidor/_header.scss
@@ -6,7 +6,7 @@ header.dmpopidor-branding {
   flex-direction: column;
   padding: 70px 0;
   // background: url(/header_banner.png) no-repeat top fixed;
-  background-color: #4492C3;
+  background-color: $blue;
   background-size: cover;
   position: relative;
 
