--- a/app/assets/stylesheets/dmpopidor/_colours.scss
+++ b/app/assets/stylesheets/dmpopidor/_colours.scss
@@ -1,13 +1,13 @@
-$blue: #146b3a;
-$dark-blue: #165b33;
-$light-blue: #587826;
-$very-light-blue: #94C840;
-$very-very-light-blue: #f8fbf3;
+$blue: #2c7dad;
+$dark-blue: #1c5170;
+$light-blue: #6ba4c5;
+$very-light-blue: #c8e1f1;
+$very-very-light-blue: #edf5fa;
 $white: #fff;
 $black: #000;
-$rust: #bb2528;
+$rust: #c6503d;
 $light-rust: #faefed;
-$yellow: #f8b229;
+$yellow: #FFCC00;
 $light-yellow: #fff9e5;
 $green: #2CAD5D;
 $light-grey: #e5e4e7;
