styling for SSO form

--- a/app/assets/stylesheets/dmptool_v5/overrides.scss
+++ b/app/assets/stylesheets/dmptool_v5/overrides.scss
@@ -513,6 +513,10 @@ div.user_request_reset_password_form {
   }
 }
 
+#sign-in-bypass-sso {
+  float: right;
+}
+
 div.usage-button {
   text-align: center;
 }
