--- a/app/views/branded/users/shared/_sso.html.erb
+++ b/app/views/branded/users/shared/_sso.html.erb
@@ -4,4 +4,4 @@
 <h3><%= resource.org.name %></h3>
 
 <%= form.hidden_field :org_id, value: resource.org_id %>
-<button type="submit"><%= label %></button>
+<button type="submit" class="btn btn-primary"><%= label %></button>
