refinement to styling of noticiations

--- a/app/assets/stylesheets/dmptool_v5/overrides.scss
+++ b/app/assets/stylesheets/dmptool_v5/overrides.scss
@@ -153,10 +153,15 @@ img.org-logo {
 }
 
 /* Notifications */
+.notification-area {
+  margin-bottom: 5px;
+}
 .c-notification--info,
 .c-notification--warning,
 .c-notification--danger {
   padding: 5px;
+  border-radius: 10px;
+  margin: 2px 0;
 
   p {
     margin: 0;
