--- a/app/assets/stylesheets/dmptool_v5/app.scss
+++ b/app/assets/stylesheets/dmptool_v5/app.scss
@@ -458,7 +458,7 @@ code {
   width: 300px;
   height: 100%;
   padding: 1rem;
-  z-index: 1;
+  z-index: 99;
   background-color: var(--dmpui-brand-blue-400);
   transition: all .35s ease;
   background-image: asset-url('bg-arrow-Up.svg');
@@ -645,6 +645,10 @@ button:hover img{
   font-weight: 700;
   color: var(--dmpui-brand-blue-400);
 }
+.dmpui-frontend .stats-item-text p a {
+  color: var(--dmpui-brand-blue-400);
+}
+
 .dmpui-frontend .stats-item-text p {
   color: #fff;
   font-size: 1.25rem;
